# airport-companion

./: .gitattributes  .gitignore  LICENSE  README.md
Airport Rag/: README.md  index.html
Airport Rag/data/: airport-corpus.json  airport-metadata.json  navigation-graph.json  shop-metadata.json
Airport Rag/scripts/: export-airport-data.mjs  static-server.mjs  static-server.ps1
Airport Rag/src/: airportData.js  main.js  styles.css
Hackathon/: airport_corpus.py  airport_directory.txt  app.py  full_voice_pipeline.py  macos_duplex_stream.swift  macos_mic_stream.swift  pyproject.toml  realtime_tools.py  server.py  vad_stt_pipeline.py  vad_test.py  vp_test.swift
Hackathon/config/: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  PROJECT_SUMMARY.md  README.md  ROADMAP.md  client_example.py  docker-compose.yml  main.py  requirements.txt  setup.bat  setup.sh  test_utils.py
Hackathon/config/config/: advanced_settings.py  settings.py
Hackathon/config/data/: airport_facilities.json  mock_users.json
Hackathon/config/src/: __init__.py  app.py  embeddings.py  generation.py  prompt_engine.py  rag.py  retrieval.py  session.py  spatial.py  vector_db.py
Hackathon/data/: flight-realtime.json
powermind2/: index.html  package-lock.json  package.json  vite.config.js
powermind2/src/: App.jsx  main.jsx  styles.css
powermind2/src/components/: AICompanion.jsx  AiSuggestionPins.jsx  AirportScene.jsx  AppShell.jsx  BoardingPassUpload.jsx  DetailModal.jsx  ErrorBoundary.jsx  FullMap.jsx  ItineraryCheckpoints.jsx  MiniMap.jsx  SmartServices.jsx  (+2 more)
(+34 files in other folders)
