[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
full = [
    "chromadb==1.5.8",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "faster-whisper>=1.2.1",
    "huggingface-hub>=0.36.2,<1",
    "kokoro>=0.7.16",
    "langchain==0.3.28",
    "langchain-community==0.3.31",
    "langchain-text-splitters==0.3.11",
    "numpy>=1.26.4,<2",
    "ollama>=0.6.2",
    "onnxruntime==1.19.2",
    "pyaudio>=0.2.14",
    "spacy>=3.8.11,<3.9",
    "spacy-curated-transformers>=0.3.1,<0.4",
    "streamlit==1.50.0",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "transformers>=4.57.6,<5",
]
